Updated the assignment document with Jim's work
<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns1.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns1.tex
@@ -5,13 +5,18 @@ and that you did not use in the 3rd assignment.
 For each chosen design pattern, you must have a corresponding implementation in your code. If not,
 refactor your code to include it.'
 
-\section{Design Pattern 1}
+\section{Model View Controller}
 
-\subsection{Description Design Pattern 1}
-`Write a natural language description of why and how the pattern is implemented in your code.'
+\subsection{MVC Description}
+The MVC is implemented by using JavaFX. If you look at the figure below, you see the principle of the MVC design pattern. The model is loaded by creating a Stage with a FXML file as resource. This model in turn creates the view and a controller. All further handling of the view is done in the controller. 
+\\
+\includegraphics[width=100mm]{MVC.png}
 
-\subsection{Class Diagram Design Pattern 1}
-`Make a class diagram of how the pattern is structured statically in your code.'
+\subsection{MVC Class Diagram}
 
-\subsection{Sequence Diagram Design Pattern 1}
+Below is the class diagram of the Model View Controller design pattern, found in our code.
+\\
+\includegraphics[width=100mm]{UML_MVC.png}
+
+\subsection{MVC Sequence Diagram}
 `Make a sequence diagram of how the pattern works dynamically in your code'
