Added more of Jim's work.
<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns2.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns2.tex
@@ -1,10 +1,11 @@
 \section{Design Pattern 2}
 
 \subsection{Description Design Pattern 2}
-`Write a natural language description of why and how the pattern is implemented in your code.'
+The definition of our levels are made in a .txt file. The problem here is determining what object of Model is loaded where. In the Factory Method pattern this is fixed by a Factory. In our case it's called LevelFactory. LevelController calls this class to load the .txt file, and eventually create all objects that are noted in the file. Then it returns a Level which LevelController uses.
+
 
 \subsection{Class Diagram Design Pattern 2}
-`Make a class diagram of how the pattern is structured statically in your code.'
+\includegraphics[width=100mm]{UML_factory.png}
 
 \subsection{Sequence Diagram Design Pattern 2}
 `Make a sequence diagram of how the pattern works dynamically in your code'
