Added the sequence diagrams and prettifying.
Made the assignment document look better and removed the parts that
weren't needed. Also added the sequence diagrams for the MVC and the
factory design patterns.

<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns1.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns1.tex
@@ -6,14 +6,17 @@
 The MVC is implemented by using JavaFX. If you look at the figure below, you see the principle of the MVC design pattern. The model is loaded by creating a Stage with a FXML file as resource. The Stage is the View for the user and the FXML file also creates a designated controller (MainController, StartController and GameEndController). The View properties can be loaded using @FXML tags. Now, when the user interacts, the information is sent to the designated controller that in turn sents the information to the View. 
 
 In reality, it's more like the figure below.
-\\
-\includegraphics[width=100mm]{MVC.png}
+\\\\
+\includegraphics[width=80mm]{MVC.png}
 
 \subsection{MVC Class Diagram}
 
-Below is the class diagram of the Model View Controller design pattern, found in our code.
-\\
-\includegraphics[width=100mm]{UML_MVC.png}
+Below is the class diagram of the Model View Controller design pattern, as found in our code.
+\\\\
+\includegraphics[width=150mm]{UML_MVC.png}
 
 \subsection{MVC Sequence Diagram}
-`Make a sequence diagram of how the pattern works dynamically in your code'
+
+Below is the sequence diagram of the Model View Controller design pattern, as found in our code.
+\\\\
+\includegraphics[width=150mm]{MVC_sequence.jpg}
