--- a/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns2.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns2.tex
@@ -5,7 +5,13 @@ The definition of our levels are made in a .txt file. The problem here is determ
 
 
 \subsection{Class Diagram Design Pattern 2}
+
+Below is the class diagram of the Factory design pattern, found as in our code.
+\\\\
 \includegraphics[width=100mm]{UML_factory.png}
 
 \subsection{Sequence Diagram Design Pattern 2}
-`Make a sequence diagram of how the pattern works dynamically in your code'
+
+Below is the sequence diagram of the Factory design pattern, as found in our code.
+\\\\
+\includegraphics[width=150mm]{factory_sequence.jpg}
