Updated the introduction.
<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
@@ -2,13 +2,13 @@
 
 \section{Question 1}
 
-The final thing we wanted to add to our game, was a boss. The boss has to have the ability to shoot the player. To make this boos harder to kill we gave the boss a few lives. Now when you have completed all the normal levels, the boss level appears, and when you kill the boss you win the game.
+In this sprint, we wanted to add 3 main new features. The first was the ability to add a high score. The idea behind this was that the scores could be kept and seen again, and that there would be a high score screen to show what the top scores for the game were. The second feature was the ability to have options, so that for example the music could be turned off by the player, if they do not like it. The final thing we wanted to add to our game, was a boss. The boss has to have the ability to shoot the player. To make this boss harder to kill we gave the boss a few lives. Now when you have completed all the normal levels, the boss level appears, and when you kill the boss you win the game.
 
 \section{Question 2}
 
 \subsection{Introduction}
 
-For the FinalEnemy we had to create two new classes, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes.
+For the boss, two new classes had to be add, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes.
 
 \subsection{Responsibility Driven Design} 
 
