Organisation in the assignment documment
<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
@@ -31,6 +31,20 @@ The StartController asks the name(s) of the player(s) via the NameInputControlle
 StartController collaborates with NameInput and HighscoreEntryController to manage custom player names for the highscores. HighscoreEntryController collaborates with Settings to save and retrieve the highscores so they are saved even after the game is stopped.
 
 \subsection{UML}
+
+\subsubsection{Highscore}
+
+The followg UML is for the High Score feature.
+\\\\
+\includegraphics[width=150mm]{HighscoreUML.png}
+
+\subsubsection{Options}
+
+\subsubsection{Final Boss}
+
+The following UML is the UML for the Boss feature.
+\\\\
 \includegraphics[width=150mm]{FinalEnemyUml.png}
 
-\includegraphics[width=150mm]{HighscoreUML.png}
+
+
