Added something to the introduction.
<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
@@ -8,7 +8,8 @@ In this sprint, we wanted to add 3 main new features. The first was the ability 
 
 \subsection{Introduction}
 
-For the boss, two new classes had to be add, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes.
+For the boss, two new classes had to be add, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes. \\
+For adding the highscore two classes have been added. These are the NameInputController and HighscoreEntryController classes. 
 
 \subsection{Responsibility Driven Design} 
 
