Made small changes.
<documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
@@ -8,7 +8,7 @@ In this sprint, we wanted to add 3 main new features. The first was the ability 
 
 \subsection{Introduction}
 
-For the boss, two new classes had to be add, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes. \\
+For the boss, two new classes had to be add, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes. \\\\
 For adding the highscore two classes have been added. These are the NameInputController and HighscoreEntryController classes. 
 
 \subsection{Responsibility Driven Design} 
@@ -37,7 +37,7 @@ StartController collaborates with NameInput and HighscoreEntryController to mana
 
 The followg UML is for the High Score feature.
 \\\\
-\includegraphics[width=150mm]{HighscoreUML.png}
+\includegraphics[width=100mm]{HighscoreUML.png}
 
 \subsubsection{Options}
 
@@ -45,7 +45,7 @@ The followg UML is for the High Score feature.
 
 The following UML is the UML for the Boss feature.
 \\\\
-\includegraphics[width=150mm]{FinalEnemyUml.png}
+\includegraphics[width=100mm]{FinalEnemyUml.png}
 
 
 
