--- a/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns1.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/design_patterns1.tex
@@ -3,9 +3,7 @@
 \section{Model View Controller}
 
 \subsection{MVC Description}
-The MVC is implemented by using JavaFX. If you look at the figure below, you see the principle of the MVC design pattern. The model is loaded by creating a Stage with a FXML file as resource. The Stage is the View for the user and the FXML file also creates a designated controller (MainController, StartController and GameEndController). The View properties can be loaded using @FXML tags. Now, when the user interacts, the information is sent to the designated controller that in turn sents the information to the View. 
-
-In reality, it's more like the figure below.
+The MVC is implemented by using JavaFX. If you look at the figure below, you see the principle of the MVC design pattern. The model is loaded by creating a Stage with a FXML file as resource. The Stage is the View for the user and the FXML file also creates a designated controller (MainController, StartController and GameEndController). The View properties can be loaded using @FXML tags. Now, when the user interacts, the information is sent to the designated controller that in turn sents the information to the View. In reality, it's more like the figure below.
 \\\\
 \includegraphics[width=80mm]{MVC.png}
 
