minor spelling corrections <documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
@@ -34,7 +34,7 @@ StartController collaborates with NameInput and HighscoreEntryController to mana
 \subsubsection{Options}
 \textit{Responsibility:} \\
 The preferences screen request the preferences to update the UI. \\
-The different objects request properties with a certain key, Settings retrieves the property. All objects can also set properties via Settings. Settings communicates with the java Properties class, which relies on a HashMap, responsible for the key-value mapping. \\ \\
+The different objects request properties with a certain key, Settings retrieves the property. All objects can also set properties via Settings. Settings communicates with the Java Properties class, which relies on a HashMap, responsible for the key-value mapping. \\ \\
 \textit{Collaborations:} \\
 Settings collaborates with Properties to store and retrieve the values for given keys.
 
@@ -42,12 +42,12 @@ Settings collaborates with Properties to store and retrieve the values for given
 
 \subsubsection{Highscore}
 
-The followg UML is for the High Score feature.
+The following UML is for the High Score feature.
 \\\\
 \includegraphics[width=100mm]{HighscoreUML.png}
 
 \subsubsection{Options}
-The followg UML is for the Options feature.
+The following UML is for the Options feature.
 \\\\
 \includegraphics[width=100mm]{Options_UML.png}
 
