minor spelling checks, put the final assignment 5 answers pdf in HAND_IN <documentation

--- a/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/20_time_revolution.tex
@@ -9,7 +9,7 @@ In this sprint, we wanted to add 3 main new features. The first was the ability 
 \subsection{Introduction}
 
 For the boss, two new classes had to be add, 'FinalEnemy' and 'BubbleEnemy', both these classes are related to other classes. \\\\
-For adding the highscore two classes have been added. These are the NameInputController and HighscoreEntryController classes. 
+For adding the high score two classes have been added. These are the NameInputController and HighscoreEntryController classes. 
 
 \subsection{Responsibility Driven Design} 
 
@@ -17,7 +17,7 @@ For adding the highscore two classes have been added. These are the NameInputCon
 \textit{Responsibility:} \\
 The final enemy has to be able to move from the top to the bottom of the screen, and it has to be able to shoot a BubbleEnemy. When the player hits the final enemy with it's bubble, he has to lose a life. \\ \\
 \textit{Collaborations:} \\
-FinalEnemy collaborates with Observable to be able to send updates to Observer classes. It also collaborates with  the SpriteBase, to get the x and y, and with both the Bubble extendsions, to fire bubbles and to be shot by bubbles.
+FinalEnemy collaborates with Observable to be able to send updates to Observer classes. It also collaborates with  the SpriteBase, to get the x and y, and with both the Bubble extensions, to fire bubbles and to be shot by bubbles.
 
 \subsubsection{BubbleEnemy}
 \textit{Responsibility:} \\
@@ -25,11 +25,11 @@ The BubbleEmey's are shot by the FinalEnemy, these bubbles have the ability to m
 \textit{Collaborations:} \\
 BubbleEnemy collaborates with Observable to be able to send updates to Observer classes. It also collaborates with  the SpriteBase, to get the x and y, with the FinalEnemy to be shot by, and with the Player to kill.
 
-\subsubsection{Highscore}
+\subsubsection{High score}
 \textit{Responsibility:} \\
 The StartController asks the name(s) of the player(s) via the NameInputController. The highscores are build up of HighscoreEntryControllers, which gets and sets the scores in Settings. \\ \\
 \textit{Collaborations:} \\
-StartController collaborates with NameInput and HighscoreEntryController to manage custom player names for the highscores. HighscoreEntryController collaborates with Settings to save and retrieve the highscores so they are saved even after the game is stopped.
+StartController collaborates with NameInput and HighscoreEntryController to manage custom player names for the high scores. HighscoreEntryController collaborates with Settings to save and retrieve the high scores so they are saved even after the game is stopped.
 
 \subsubsection{Options}
 \textit{Responsibility:} \\
@@ -40,7 +40,7 @@ Settings collaborates with Properties to store and retrieve the values for given
 
 \subsection{UML}
 
-\subsubsection{Highscore}
+\subsubsection{High score}
 
 The following UML is for the High Score feature.
 \\\\
